welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: value max_ is not a member of object Math
  return Math.max_
              ^